--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "ext-gd": "*",
     "ext-json": "*",
     "algolia/algoliasearch-client-php": "2.2",
+    "andreaselia/laravel-api-to-postman": "^1.11",
     "bumbummen99/shoppingcart": "^4.1",
     "cartalyst/stripe-laravel": "^12.0",
     "cviebrock/eloquent-sluggable": "7.0",
@@ -23,6 +24,7 @@
     "inertiajs/inertia-laravel": "^0.5.4",
     "laravel/framework": "^7.29",
     "laravel/helpers": "^1.3",
+    "laravel/sanctum": "^2.15",
     "laravel/scout": "8.6.1",
     "laravel/tinker": "^2.0",
     "laravel/ui": "2.4",
