--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "inertiajs/inertia-laravel": "^0.5.4",
     "laravel/framework": "^7.29",
     "laravel/helpers": "^1.3",
+    "laravel/passport": "~9.0",
     "laravel/sanctum": "^2.15",
     "laravel/scout": "8.6.1",
     "laravel/tinker": "^2.0",
